--- a/Server/travel_go_api/package.json
+++ b/Server/travel_go_api/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "eslint": "^8.54.0",
+    "nodemon": "^2.0.22"
   }
 }
