--- a/Client/travel-go-client/package.json
+++ b/Client/travel-go-client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-medium-image-zoom": "^5.1.2",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.4.3",
     "react-tag-input": "^6.8.1",
     "react-toastify": "^9.1.1",
